v2/10-vote-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vote-ingress
  namespace: vote
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^(/vote)$ $1/ redirect;
spec:
  ingressClassName: 'nginx'
  rules:
  - http:
      paths:
      - path: /vote(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: vote
            port:
              number: 5000
