v2/11-vote-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vote-ingress
  annotations:  
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
spec:
  ingressClassName: 'nginx'
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vote
            port:
              number: 5000
      - path: /result/?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: result
            port:
              number: 5001
